# SCP_Roguelike

./: .gitignore  2025OOPL_Final.md  CMakeLists.txt  CMakeSettings.json  Proposal.md  README.md  README.zh-TW.md  SCP_Roguelike.exe - 捷徑.lnk
PTSD/example/src/: App.cpp
PTSD/include/: config.hpp
PTSD/include/Core/: Context.hpp
PTSD/include/Util/: GameObject.hpp
PTSD/src/Core/: Context.cpp  Texture.cpp
PTSD/src/Util/: Image.cpp
Resources/: cover.aseprite
include/: App.hpp  BloodCoin.hpp  Bullet.hpp  BulletBox.hpp  Bullet_Box.hpp  Button.hpp  Camera.hpp  Charater.hpp  Chest.hpp  Collider.hpp  Door.hpp  Elevator.hpp  Enemy.hpp  Hand.hpp  IRangedAttack.hpp  Item.hpp  LevelManager.hpp  MapUI.hpp  Menu.hpp  Player.hpp  SCP049_2.hpp  SCP1048_B.hpp  SCP1048_C.hpp  SCP553.hpp  SCP610.hpp  SCP743A.hpp  SCP743B.hpp  Slider.hpp  Table.hpp  Tilemap.hpp  Trap.hpp  UI.hpp  UIText.hpp
include/Enemies/: SCP049.hpp  SCP1048_B.hpp  SCP3199.hpp  SCP3199_2.hpp  SCP743.hpp  SCP743A.hpp  SCP743B.hpp
include/core/: Actor.hpp  BoxCollider.hpp  Camera.hpp  ColliderManager.hpp  Object.hpp  Solid.hpp
src/: App.cpp  BloodCoin.cpp  Bullet.cpp  BulletBox.cpp  Bullet_Box.cpp  Chest.cpp  Collider.cpp  Door.cpp  Elevator.cpp  Enemy.cpp  Hand.cpp  Item.cpp  LevelManager.cpp  MapUI.cpp  Menu.cpp  Player.cpp  SCP049_2.cpp  SCP1048_B.cpp  SCP1048_C.cpp  SCP553.cpp  SCP610.cpp  SCP743A.cpp  SCP743B.cpp  Table.cpp  Tilemap.cpp  Trap.cpp  UI.cpp  UIText.cpp  main.cpp
src/Enemies/: SCP049.cpp  SCP049_2.cpp  SCP1048_B.cpp  SCP1048_C.cpp  SCP3199.cpp  SCP3199_2.cpp  SCP553.cpp  SCP610.cpp  SCP743.cpp  SCP743A.cpp  SCP743B.cpp
src/core/: Actor.cpp  BoxCollider.cpp  Camera.cpp  ColliderManager.cpp  Object.cpp  Solid.cpp
